--- a/style.css
+++ b/style.css
@@ -80,25 +80,77 @@ nav a:hover{
   padding-top: 10px;
   text-align: center;
 }
+.occupations_bg_container{
+  text-align: center;
+  height: 900px;
+}
 
-.occ_contain{
+.occupations_container{
   background-color: white;
   border: 1px solid rgba(9,207,255, 0.4);
   margin-top: -150px;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 95%;
   border-radius: 10px;
-  height: 500px;
-}
-
-.occupations_container{
-  text-align: center;
+  height: 650px;
+  box-shadow: 1px 5px 10px gray;
 }
 
 .occupation{
   font-size: 10px;
-  margin-top: 150px;
-  width: 30%;
+  width: 33.33%;
   float: left;
+  height: 650px;
+}
+
+.occupation:first-child{
+  border-right: 1px solid rgba(220,220,220, 0.4);;
+}
+
+.occupation:last-child{
+  border-left: 1px solid rgba(220,220,220, 0.4);;
+}
+
+.occupation_icons{
+  width: 20%;
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+.occupation:last-child img{
+  padding-top: 15px;
+}
+
+.occupation p{
+  margin: 40px;
+  font-size: 15px;
+  line-height: 200%;
+}
+
+.occupation .highlight_section{
+  line-height: 1.6;
+  color: rgb(9,207,255);
+  font-size: 20px;
+}
+
+.occupation .highlight_section2{
+  line-height: 1.6;
+  color: rgb(9,207,255);
+  font-size: 20px;
+}
+
+.occupation .list_horizontal{
+  margin-top: -40px;
+}
+
+.occupation ul{
+  margin: 0;
+  padding: 0;
+  margin-top: -40px;
+}
+.occupation ul li{
+  list-style: none;
+  font-size: 15px;
+  line-height: 200%;
 }
