--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ nav a:hover{
 }
 .occupations_bg_container{
   text-align: center;
-  height: 900px;
+  height: 600px;
 }
 
 .occupations_container{
@@ -120,7 +120,6 @@ nav a:hover{
   border-radius: 10px;
   height: 450px;
   box-shadow: 1px 5px 10px gray;
-
 }
 
 .occupation{
@@ -201,10 +200,54 @@ nav a:hover{
   background-color: black;
 }
 
+.work_container{
+  height: 500px;
+}
+
+.work_container h1{
+  text-align: center;
+  font-size: 30px;
+}
+
+.work_container p{
+  padding-top: 20px;
+  padding-bottom: 40px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.work_container .projects_container{
+  margin-top: 30px;
+}
+
+.work_container .projects_container .works{
+  height: auto;
+  overflow: auto;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+
+.work_container .projects_container .works .img{
+  float: left;
+  height: 100%;
+  width: 25%;
+  border-radius: 10px;
+  margin-left: 6%;
+}
+
+.img .img1{
+  width: 100%;
+  border-radius: 10px;
+}
+
+.img .title{
+  font-size: 100px;
+}
+
+
+/* FOOTER */
 footer{
   background-color: rgb(9,207,255);
-  height: 100px;
-}
-footer .footer_container{
-  border: 2px solid black;
+  height: 50px;
 }
