--- a/style.css
+++ b/style.css
@@ -184,7 +184,6 @@ nav a:hover{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  border: 1px solid rgb(9,207,255);
   font-size: 20px;
   background-color: rgb(9,207,255);
   border-radius: 20px;
@@ -197,7 +196,9 @@ nav a:hover{
 }
 
 .occupation .button:hover{
-  background-color: black;
+  background-color: rgb(255,194,88);
+  transition-duration: 0.2s;
+  box-shadow: 1px 1px 3px gray;
 }
 
 .work_container{
