--- a/style.css
+++ b/style.css
@@ -320,3 +320,33 @@ footer .icons img{
   border-radius: 45px;
   border: 2px solid white;
 }
+
+.occupationInfo_bg_container{
+  background-color: white;
+  height: 500px;
+}
+
+.occupationInfo_container{
+  border-radius: 5px;
+}
+.occupationInfo_container h1{
+  padding-top: 5px;
+  margin-left: 50px;
+  height: 50px;
+  border-left: 5px solid rgb(255,194,88);
+  padding-left: 10px;
+}
+
+.occupationInfo_container p{
+  text-align: center;
+  line-height: 200%;
+}
+
+.blue_line{
+  width: 90%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  border: 2px solid rgb(9,207,255);
+  margin-left: auto;
+  margin-right: auto;
+}
