--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ nav a:hover{
 }
 
 .home_welcome h1{
-  font-size: 50px;
+  font-size: 3.9vw;
   text-align: center;
   margin-top: 5%;
 }
@@ -62,16 +62,40 @@ nav a:hover{
 .home_welcome h3 {
   text-align: center;
   padding-top: 10px;
+  font-size: 1.3vw;
+
 }
 
-.animation_container{
-  width: 100%;
-  height: 100px;
+/* ANIMATION HERE */
+.animation_container {
+  width: 1%;
+  height: 10vw;
+  border-left: 0.1vw solid black;
+  position: absolute;
+  left: 82.7%;
+  top: 30.5%;
+  animation-name: swing;
+  transform-origin: top;
+  animation-iteration-count: infinite;
+  animation-duration: 3s;
+  transition: 0.2s;
+
 }
+
+@keyframes swing {
+  20% { transform: rotate(15deg); }
+  40% { transform: rotate(-10deg); }
+  60% { transform: rotate(5deg); }
+  80% { transform: rotate(-5deg); }
+  100% { transform: rotate(0deg); }
+}
+/* END ANIMATION */
+
 .platform_container{
   width: 40%;
   border: 2px solid black;
   margin: auto;
+  margin-top: 90px;
   height: 100px;
 }
 
@@ -232,14 +256,33 @@ nav a:hover{
 
 .work_container .projects_container .works .img{
   float: left;
-  height: 100%;
   width: 25%;
   border-radius: 10px;
   margin-left: 6%;
 }
 
+.img a, h2{
+  z-index: 1;
+}
+
+.img a:hover + img{
+  filter: brightness(40%);
+  transition-duration: 0.5s;
+}
+
+.img h2:hover ~ img{
+  filter: brightness(40%);
+  transition-duration: 0.5s;
+}
+
+
+.work_container .projects_container .works .img img{
+  height: 200px;
+  box-shadow: 1px 1px 10px black;
+}
+
 .img{
-    position: relative;
+  position: relative;
 }
 
 .img .img1{
@@ -287,30 +330,23 @@ nav a:hover{
   background-color: rgb(9,207,255);
 }
 
-.works .img:last-child h2{
-  top: 40%;
-  left: 38%;
-}
-
-
-.works .img:nth-child(2) h2{
-  top: 40%;
-  left: 38%;
-}
 
 /* FOOTER */
 .footer_container{
   background-color: rgb(9,207,255);
   height: auto;
+  padding-top: 5px;
 }
 
 footer .text{
-  padding-top: 2%;
+  padding-top: 1%;
   text-align: center;
+  padding-bottom: 2%;
 }
 
 .footer_container .icons{
   text-align: center;
+  margin-top: 20px;
 }
 
 
@@ -318,7 +354,7 @@ footer .icons img{
   margin: 1%;
   width: 4%;
   border-radius: 45px;
-  border: 2px solid white;
+  border: 2px solid rgb(9,207,255);
 }
 
 .occupationInfo_bg_container{
@@ -329,11 +365,12 @@ footer .icons img{
 .occupationInfo_container{
   border-radius: 5px;
 }
+
 .occupationInfo_container h1{
   padding-top: 5px;
   margin-left: 50px;
   height: 50px;
-  border-left: 5px solid rgb(255,194,88);
+  border-left: 5px solid white;
   padding-left: 10px;
 }
 
