--- a/style.css
+++ b/style.css
@@ -54,16 +54,38 @@ nav a:hover{
   color: black;
 }
 
-.chicken_container{
+.duck_container{
   margin-top: 50px;
   margin-bottom: 5px;
   overflow: auto;
 }
 
-.chicken_container img{
+.duck_container img{
   width: 4%;
   float: left;
   margin-left: 60vw;
+  cursor: pointer;
+}
+
+.duck_container img:hover{
+  width: 4%;
+  float: left;
+  margin-left: 60vw;
+  cursor: pointer;
+}
+
+
+
+.duck_container .shape{
+  border-top: 15px solid red;
+  border-bottom: 15px solid blue;
+  border-left: 15px solid green;
+  border-right: 15px solid pink;
+  height: 30px;
+  width: 30px;
+  float: left;
+  z-index: -3;
+  position: absolute;
 }
 
 .message{
@@ -81,7 +103,7 @@ nav a:hover{
   animation-name: fadeMessage;
   animation-delay: 5s;
   padding: 5px;
-  animation-duration: 1s;
+  animation-duration: 0.5s;
 }
 
 @keyframes fadeMessage {
@@ -97,7 +119,7 @@ nav a:hover{
   border: 1px solid black;
   animation-fill-mode: forwards;
   animation-name: showMessage;
-  animation-delay: 6s;
+  animation-delay: 5.5s;
   animation-duration: 1s;
   padding: 5px;
   opacity: 0%;
@@ -106,8 +128,10 @@ nav a:hover{
 @keyframes showMessage{
   0%{}
   50%{opacity: 50%;}
-  100%{opacity: 100%; transform: translateX(-85px)}
+  100%{opacity: 100%; transform: translateX(-85px);}
 }
+
+
 
 .home_welcome h1{
   font-size: 3.9vw;
