--- a/style.css
+++ b/style.css
@@ -28,19 +28,24 @@ body{
   font-family:'Montserrat';
 }
 nav {
-  height: 65px;
+  height: 50px;
+  background-color: transparent;
 }
 
 nav a{
   margin: 1%;
   text-decoration: none;
   color: black;
+  padding: 10px;
+}
+
+nav a:first-child{
+  padding: 0;
 }
 
 nav a:hover{
-  border-bottom: 2px solid orange;
-  padding-bottom: 3px;
-  transition-duration: 0.2s;
+  background-color: orange;
+  transition-duration: 0.3s;
 }
 
 .name{
@@ -49,9 +54,17 @@ nav a:hover{
 
 .links{
   text-align: right;
-  padding: 25px;
+  padding: 10px;
   font-size: 25px;
-  color: black;
+  background-color: black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 3;
+}
+
+.links a{
+  color: white;
 }
 
 .duck_container{
@@ -74,8 +87,6 @@ nav a:hover{
   cursor: pointer;
 }
 
-
-
 .duck_container .shape{
   border-top: 15px solid red;
   border-bottom: 15px solid blue;
@@ -92,13 +103,14 @@ nav a:hover{
   padding: 5px;
   margin-top: -100px;
   border: 1px solid red;
+  color: white;
 }
 
 .message .duck_message{
   border-radius: 10px;
   width: fit-content;
   float: left;
-  border: 1px solid black;
+  border: 1px solid white;
   animation-fill-mode: forwards;
   animation-name: fadeMessage;
   animation-delay: 5s;
@@ -116,7 +128,7 @@ nav a:hover{
   border-radius: 10px;
   width: fit-content;
   float: left;
-  border: 1px solid black;
+  border: 1px solid white;
   animation-fill-mode: forwards;
   animation-name: showMessage;
   animation-delay: 5.5s;
@@ -131,19 +143,37 @@ nav a:hover{
   100%{opacity: 100%; transform: translateX(-85px);}
 }
 
+.color{
+  background-color: #A9A9A9;
+  border: 1px solid black;
+  height: 500px;
+  position: absolute;
+  top:0;
+  z-index: -1;
+  overflow: auto;
+}
 
+.welcome_bg{
+  background-color: black;
+  padding-bottom: 150px;
+  height: 600px;
+  border-bottom: 5px solid black;
+}
+
+.home_welcome{
+  color: white;
+}
 
 .home_welcome h1{
   font-size: 3.9vw;
   text-align: center;
-  margin-top: 1%;
+  padding-top: 110px;
   opacity: 0%;
   animation-name: fadeIn;
   animation-duration: 2s;
   animation-delay: 0.2s;
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
-  padding-bottom: 5px;
 }
 
 @keyframes fadeIn{
@@ -152,28 +182,26 @@ nav a:hover{
 }
 
 .home_welcome .subtitle_container{
-  width: 100%:
-  border: 1px solid black;
+  width: 100%;
 }
 
 .home_welcome .subtitle_container h3 {
-  text-align: left;
   padding-top: 5px;
   font-size: 1.3vw;
   animation-name: fadeIn_subtitle;
-  animation-duration: 2s;
+  animation-duration: 3s;
   animation-delay: 0.8s;
   animation-fill-mode: forwards;
   animation-iteration-count: 1;
-  padding-bottom: 10px;
+  padding-bottom: 0px;
   margin-top: 100px;
   opacity: 0%;
-  width: fit-content;
+  text-align: center;
 }
 
 @keyframes fadeIn_subtitle{
   0%{}
-  100%{opacity: 100%; transform: translateX(110%);}
+  100%{opacity: 100%; transform: translateY(50);}
 }
 
 /* ANIMATION HERE */
@@ -202,30 +230,49 @@ nav a:hover{
 
 #load_bar{
   width: 40%;
-  background-color: #ddd;
+  background-color: rgba(0,0,0,0.8);
   margin: auto;
-  height: 30px;
+  height: 45px;
   margin-top: -5px;
-  box-shadow: 1px 1px 5px black;
+  margin-bottom: 80px;
+  padding: 10px;
+  border: 1px solid orange;
+  border-radius: 10px;
 }
 
 #progress_bar{
   width: 0%;
   height: 30px;
-  background-color: orange;
+  background-image: linear-gradient(to right, #ffff00, #ffcc00);
   text-align: center;
   line-height: 30px;
-  color: white;
+  color: black;
+  border-radius: 10px;
+  margin-top: -3px;
 }
 
+
+
+/* END WAVE rgb(9,207,255); */
+
 .aboutme_container{
-  margin-top: 300px;
-  height: 650px;
-  background-color: rgb(9,207,255);
+  height: 730px;
+  background-color: white;
+}
+
+
+.orange_container{
+  background-color: orange;
+  height: 500px;
+  position: absolute;
+  top: 400;
+  width: 100%;
+  z-index: -1;
 }
 
 .intro{
   color: black;
+  padding-bottom: 300px;
 }
 
 .intro h1{
@@ -246,20 +293,23 @@ nav a:hover{
   text-align: center;
   padding-top: 40px;
 }
+
 .intro h4{
   font-size: 20px;
   padding-top: 10px;
   text-align: center;
 }
+
 .occupations_bg_container{
   text-align: center;
   height: 600px;
+  margin-top: -250px;
 }
 
 .occupations_container{
   background-color: white;
   border: 1px solid rgba(9,207,255, 0.4);
-  margin-top: -150px;
+  margin-top: 10px;
   margin-left: auto;
   margin-right: auto;
   width: 95%;
@@ -331,7 +381,7 @@ nav a:hover{
   margin-right: auto;
   width: 50%;
   font-size: 20px;
-  background-color: rgb(9,207,255);
+  background-color: rgba(0,0,0,0.8);
   border-radius: 20px;
   padding: 5px;
 }
@@ -454,7 +504,7 @@ nav a:hover{
 
 /* FOOTER */
 .footer_container{
-  background-color: rgb(9,207,255);
+  background-color: rgba(0,0,0,0.8);
   height: auto;
   padding-top: 5px;
 }
@@ -463,6 +513,7 @@ footer .text{
   padding-top: 1%;
   text-align: center;
   padding-bottom: 2%;
+  color: white;
 }
 
 .footer_container .icons{
@@ -475,16 +526,16 @@ footer .icons img{
   margin: 1%;
   width: 4%;
   border-radius: 45px;
-  border: 2px solid rgb(9,207,255);
+  border: 2px solid white;
 }
 
 .occupationInfo_bg_container{
   background-color: white;
-  height: 500px;
+  height: 300px;
 }
 
 .occupationInfo_container{
-  border-radius: 5px;
+  border-radius: 300px;
 }
 
 .occupationInfo_container h1{
