--- a/style.css
+++ b/style.css
@@ -33,7 +33,6 @@ nav {
 }
 
 nav a{
-  margin: 1%;
   text-decoration: none;
   color: black;
   padding: 10px;
@@ -237,7 +236,7 @@ nav a:hover{
   margin-bottom: 80px;
   padding: 10px;
   border: 1px solid orange;
-  border-radius: 10px;
+  border-radius: 30px;
 }
 
 #progress_bar{
@@ -247,11 +246,9 @@ nav a:hover{
   text-align: center;
   line-height: 30px;
   color: black;
-  border-radius: 10px;
+  border-radius: 30px;
   margin-top: -3px;
 }
-
-
 
 /* END WAVE rgb(9,207,255); */
 
@@ -260,6 +257,13 @@ nav a:hover{
   background-color: white;
 }
 
+.line{
+  margin-top: 20px;
+  border-bottom: 5px solid orange;
+  margin-left: auto;
+  margin-right: auto;
+  width: 10%;
+}
 
 .orange_container{
   background-color: orange;
